# sqlx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  README.md  gen-changelog.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: examples.yml  sqlx.yml
benches/sqlite/: describe.rs
bk-sqlx-bench/: Cargo.toml  README.md
bk-sqlx-bench/benches/: pg_pool.rs  sqlite_fetch_all.rs
bk-sqlx-cli/: Cargo.toml  README.md
bk-sqlx-cli/src/: completions.rs  database.rs  lib.rs  migrate.rs  opt.rs  prepare.rs
bk-sqlx-cli/tests/assets/: sample_metadata.json
bk-sqlx-cli/tests/common/: mod.rs
bk-sqlx-core/: Cargo.toml
bk-sqlx-core/src/: acquire.rs  connection.rs  database.rs  decode.rs  from_row.rs  lib.rs  logger.rs  query.rs  query_as.rs  query_builder.rs  query_scalar.rs  raw_sql.rs  sync.rs  transaction.rs
bk-sqlx-core/src/any/: driver.rs  mod.rs
bk-sqlx-core/src/io/: buf_stream.rs  write_and_flush.rs
bk-sqlx-core/src/migrate/: error.rs  migrator.rs  source.rs
bk-sqlx-core/src/pool/: connection.rs  mod.rs  options.rs
bk-sqlx-core/src/types/: json.rs  mod.rs  text.rs
bk-sqlx-macros/: Cargo.toml
bk-sqlx-macros-core/: Cargo.toml
bk-sqlx-macros-core/src/: lib.rs  migrate.rs  test_attr.rs
bk-sqlx-macros-core/src/database/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
bk-sqlx-macros-core/src/derives/: attributes.rs  decode.rs  encode.rs  row.rs  type.rs
bk-sqlx-macros-core/src/query/: args.rs  data.rs  mod.rs  output.rs
bk-sqlx-macros/src/: lib.rs
bk-sqlx-mysql/: Cargo.toml
bk-sqlx-mysql/src/: any.rs  arguments.rs  column.rs  database.rs  error.rs  lib.rs  migrate.rs  row.rs  statement.rs  transaction.rs  type_info.rs  value.rs
bk-sqlx-mysql/src/connection/: establish.rs  executor.rs  mod.rs
bk-sqlx-mysql/src/io/: mod.rs
bk-sqlx-mysql/src/options/: connect.rs  mod.rs  parse.rs
bk-sqlx-mysql/src/testing/: mod.rs
bk-sqlx-mysql/src/types/: mod.rs  text.rs
bk-sqlx-postgres/: Cargo.toml
bk-sqlx-postgres/src/: advisory_lock.rs  any.rs  arguments.rs  column.rs  copy.rs  database.rs  error.rs  lib.rs  listener.rs  migrate.rs  row.rs  statement.rs  transaction.rs  type_info.rs  value.rs
bk-sqlx-postgres/src/connection/: describe.rs  executor.rs  mod.rs  stream.rs
bk-sqlx-postgres/src/io/: buf_mut.rs  mod.rs
bk-sqlx-postgres/src/message/: authentication.rs  backend_key_data.rs  command_complete.rs  copy.rs  data_row.rs  describe.rs  execute.rs  mod.rs  notification.rs  parameter_description.rs  parameter_status.rs  parse.rs  ready_for_query.rs  response.rs  row_description.rs
bk-sqlx-postgres/src/options/: connect.rs  mod.rs  parse.rs
bk-sqlx-postgres/src/testing/: mod.rs
bk-sqlx-postgres/src/types/: array.rs  bigdecimal.rs  bit_vec.rs  citext.rs  json.rs  mod.rs  numeric.rs  range.rs  record.rs  rust_decimal.rs  text.rs  time_tz.rs
bk-sqlx-sqlite/: Cargo.toml
bk-sqlx-sqlite/src/: any.rs  arguments.rs  column.rs  database.rs  error.rs  lib.rs  logger.rs  migrate.rs  regexp.rs  row.rs  transaction.rs  type_info.rs  value.rs
bk-sqlx-sqlite/src/connection/: describe.rs  establish.rs  execute.rs  executor.rs  explain.rs  mod.rs  worker.rs
bk-sqlx-sqlite/src/options/: connect.rs  mod.rs  parse.rs
bk-sqlx-sqlite/src/statement/: mod.rs  virtual.rs
bk-sqlx-sqlite/src/testing/: mod.rs
bk-sqlx-sqlite/src/types/: mod.rs  text.rs
bk-sqlx-test/: Cargo.toml
bk-sqlx-test/src/: lib.rs
examples/: x.py
examples/mysql/todos/: Cargo.toml  README.md
examples/mysql/todos/src/: main.rs
examples/postgres/axum-social-with-tests/: Cargo.toml  README.md
examples/postgres/axum-social-with-tests/src/: main.rs
examples/postgres/axum-social-with-tests/src/http/: error.rs  mod.rs  user.rs
examples/postgres/axum-social-with-tests/src/http/post/: comment.rs  mod.rs
examples/postgres/axum-social-with-tests/tests/: comment.rs  post.rs  user.rs
examples/postgres/chat/: Cargo.toml  README.md
examples/postgres/chat/src/: main.rs
examples/postgres/files/: Cargo.toml  README.md
examples/postgres/files/src/: main.rs
examples/postgres/json/: Cargo.toml  README.md
examples/postgres/json/src/: main.rs
examples/postgres/listen/: Cargo.toml
examples/postgres/listen/src/: main.rs
examples/postgres/mockable-todos/: Cargo.toml  README.md
examples/postgres/mockable-todos/src/: main.rs
examples/postgres/todos/: Cargo.toml  README.md
examples/postgres/todos/src/: main.rs
examples/postgres/transaction/: Cargo.toml
examples/postgres/transaction/src/: main.rs
examples/sqlite/todos/: Cargo.toml  README.md
examples/sqlite/todos/src/: main.rs
sqlx-mysql/src/options/: connect.rs
src/: lib.md  lib.rs
src/any/: mod.rs
src/macros/: mod.rs  test.md
tests/: .env  README.md  docker-compose.yml  docker.py  x.py
tests/any/: any.rs  pool.rs
tests/migrate/: macro.rs
tests/mssql/: describe.rs  macros.rs  mssql.rs  setup.sql  types.rs
tests/mysql/: describe.rs  error.rs  macros.rs  migrate.rs  mysql.rs  test-attr.rs  types.rs
tests/postgres/: derives.rs  describe.rs  error.rs  macros.rs  migrate.rs  postgres.rs  test-attr.rs  types.rs
tests/sqlite/: any.rs  derives.rs  describe.rs  error.rs  macros.rs  migrate.rs  setup.sql  sqlcipher.rs  sqlite.rs  test-attr.rs  types.rs
tests/ui/mysql/gated/: chrono.rs  chrono.stderr
tests/ui/postgres/: deprecated_rename.rs  deprecated_rename.stderr  issue_30.rs  issue_30.stderr  unsupported-type.rs  unsupported-type.stderr  wrong_param_type.rs  wrong_param_type.stderr
tests/ui/postgres/gated/: chrono.rs  chrono.stderr  ipnetwork.rs  ipnetwork.stderr  uuid.rs  uuid.stderr
tests/ui/sqlite/: expression-column-type.rs  expression-column-type.stderr
