[package]
name = "bk-sqlx-bench"
version = "0.1.0"
authors = ["Austin Bonander <austin@launchbadge.com>"]
edition = "2021"
publish = false

[features]
runtime-actix-native-tls = ["runtime-tokio-native-tls"]
runtime-async-std-native-tls = [
    "bk-sqlx/runtime-async-std-native-tls",
]
runtime-tokio-native-tls = [
    "bk-sqlx/runtime-tokio-native-tls",
]

runtime-actix-rustls = ["runtime-tokio-rustls"]
runtime-async-std-rustls = [
    "bk-sqlx/runtime-async-std-rustls",
]
runtime-tokio-rustls = [
    "bk-sqlx/runtime-tokio-rustls",
]

postgres = ["bk-sqlx/postgres"]
sqlite = ["bk-sqlx/sqlite"]

[dependencies]
criterion = "0.5.1"
dotenvy = "0.15.0"
once_cell = "1.4"
bk-sqlx = { workspace = true, default-features = false, features = ["macros"] }

chrono = "0.4.19"

[[bench]]
name = "pg_pool"
harness = false
required-features = ["postgres"]

[[bench]]
name = "sqlite_fetch_all"
harness = false
required-features = ["sqlite"]
