[package]
name = "bk-sqlx-cli"
version.workspace = true
description = "Command-line utility for SQLx, the Rust SQL toolkit."
edition = "2021"
readme = "README.md"
homepage = "https://github.com/launchbadge/bk-sqlx"
repository = "https://github.com/launchbadge/bk-sqlx"
keywords = ["database", "postgres", "database-management", "migration"]
categories = ["database", "command-line-utilities"]
license = "MIT OR Apache-2.0"
default-run = "bk-sqlx"
authors = [
    "Jesper Axelsson <jesperaxe@gmail.com>",
    "Austin Bonander <austin.bonander@gmail.com>",
]

[[bin]]
name = "bk-sqlx"
path = "src/bin/bk-sqlx.rs"

# enables invocation as `cargo bk-sqlx`; required for `prepare` subcommand
[[bin]]
name = "cargo-bk-sqlx"
path = "src/bin/cargo-bk-sqlx.rs"

[dependencies]
dotenvy = "0.15.0"
tokio = { version = "1.15.0", features = ["macros", "rt", "rt-multi-thread"] }
bk-sqlx = { workspace = true, default-features = false, features = [
    "runtime-tokio",
    "migrate",
    "any",
] }
futures = "0.3.19"
clap = { version = "4.3.10", features = ["derive", "env"] }
clap_complete = { version = "4.3.1", optional = true }
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
anyhow = "1.0.52"
url = { version = "2.2.2", default-features = false }
async-trait = "0.1.52"
console = "0.15.0"
promptly = "0.3.0"
serde_json = "1.0.73"
serde = { version = "1.0.132", features = ["derive"] }
glob = "0.3.0"
openssl = { version = "0.10.38", optional = true }
cargo_metadata = "0.14"
filetime = "0.2"

backoff = { version = "0.4.0", features = ["futures", "tokio"] }

[features]
default = ["postgres", "sqlite", "mysql", "native-tls", "completions"]
rustls = ["bk-sqlx/runtime-tokio-rustls"]
native-tls = ["bk-sqlx/runtime-tokio-native-tls"]

# databases
mysql = ["bk-sqlx/mysql"]
postgres = ["bk-sqlx/postgres"]
sqlite = ["bk-sqlx/sqlite"]

# workaround for musl + openssl issues
openssl-vendored = ["openssl/vendored"]

completions = ["dep:clap_complete"]

[dev-dependencies]
assert_cmd = "2.0.11"
