[package]
name = "bk-sqlx-macros"
description = "Macros for SQLx, the rust SQL toolkit. Not intended to be used directly."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]
default = []

# for conditional compilation
_rt-async-std = ["bk-sqlx-macros-core/_rt-async-std"]
_rt-tokio = ["bk-sqlx-macros-core/_rt-tokio"]

_tls-native-tls = ["bk-sqlx-macros-core/_tls-native-tls"]
_tls-rustls = ["bk-sqlx-macros-core/_tls-rustls"]

# SQLx features
migrate = ["bk-sqlx-macros-core/migrate"]

# database
mysql = ["bk-sqlx-macros-core/mysql"]
postgres = ["bk-sqlx-macros-core/postgres"]
sqlite = ["bk-sqlx-macros-core/sqlite"]

# type
bigdecimal = ["bk-sqlx-macros-core/bigdecimal"]
bit-vec = ["bk-sqlx-macros-core/bit-vec"]
chrono = ["bk-sqlx-macros-core/chrono"]
ipnetwork = ["bk-sqlx-macros-core/ipnetwork"]
mac_address = ["bk-sqlx-macros-core/mac_address"]
rust_decimal = ["bk-sqlx-macros-core/rust_decimal"]
time = ["bk-sqlx-macros-core/time"]
uuid = ["bk-sqlx-macros-core/uuid"]
json = ["bk-sqlx-macros-core/json"]

[dependencies]
bk-sqlx-core = { workspace = true, features = ["any"] }
bk-sqlx-macros-core = { workspace = true }

proc-macro2 = { version = "1.0.36", default-features = false }
syn = { version = "1.0.84", default-features = false, features = ["parsing", "proc-macro"] }
quote = { version = "1.0.14", default-features = false }
