[package]
name = "bk-sqlx-example-postgres-transaction"
version = "0.1.0"
edition = "2021"
workspace = "../../../"

[dependencies]
bk-sqlx = { path = "../../../", features = [ "postgres", "runtime-tokio-native-tls" ] }
futures = "0.3.1"
tokio = { version = "1.20.0", features = ["rt-multi-thread", "macros"]}
